updated ui/fixed alignment of images

--- a/src/components/TripPage.css
+++ b/src/components/TripPage.css
@@ -14,7 +14,15 @@
     max-width: 50%;
     min-height: 300px;
     box-sizing: border-box;
+    padding-top: .5%;
 }
+
+
+.trip-info {
+    padding-left: .5%;
+}
+
+
 
 .trip-info {
     flex-basis: 50%;
@@ -24,12 +32,44 @@
     box-sizing: border-box;
 }
 
-.photos img {
-    width: 100%;
+.photos {
+    width: 100%; /* Ensure the photos div does not exceed the parent width */
+}
+
+.photos-img {
+    max-width: 100%;
     height: auto;
-    object-fit: cover;
+    object-fit: contain; /* Adjust object-fit to contain to ensure images fit without stretching or cropping */
+    display: block; /* This should already make the image block-level, taking up the full width of its container */
+    margin: 0 auto; /* Center the image within its container if it's not as wide */
+}
+
+.photo-container {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    /* Rest of your styles */
+}
+
+.photo-caption {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+    color: #fff; /* White text color */
+    text-align: center;
+    padding: 5px 0; /* Some padding */
+    /* Rest of your styles */
+}
+
+.photo-container:hover .photo-caption {
     display: block;
 }
+
+  
 
 .custom-icon {
     position: relative;
